--- a/test.html
+++ b/test.html
@@ -4,11 +4,13 @@
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<script src="atom.js"></script>
-	<script src="class.js"></script>
   </head>
   <body>
 	  <em class="first" ></em>
 	  <em class="second"></em>
 	  <em class="third" ></em>
   </body>
+	<script>
+atom('em').ajax({ interval: 5, url: 'inner.php' });
+	</script>
 </html>
