[AtomJS Plugin] Uri

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -546,6 +546,13 @@ test('Static', function(){
 	equal(bar.self.barStat, 'barStatValue', 'bar.self.barStat');
 });
 
+
+module('[Atom Plugins] Uri');
+test('Uri', function(){
+	// todo: write tests. you can use some of this:
+	// http://stevenlevithan.com/demo/parseuri/js/
+});
+
 });
 	</script>
 </html>
