Array: mootools compability (+ tests)

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -34,5 +34,6 @@
 	<script src="tests/prototypes.js"></script>
 	<script src="tests/class.js"></script>
 	<script src="tests/uri.js"></script>
+	<script src="tests/mootools.js"></script>
 	<script src="tests/dom.js"></script>
 </html>
