atom.declare + tests

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -32,6 +32,7 @@
 	<!-- Tests -->
 	<script src="tests/core.js"></script>
 	<script src="tests/prototypes.js"></script>
+	<script src="tests/declare.js"></script>
 	<script src="tests/class.js"></script>
 	<script src="tests/uri.js"></script>
 	<script src="tests/mootools.js"></script>
