--- a/Tests/index.html
+++ b/Tests/index.html
@@ -33,6 +33,7 @@
 	<script src="tests/core.js"></script>
 	<script src="tests/prototypes.js"></script>
 	<script src="tests/declare.js"></script>
+	<script src="tests/color.js"></script>
 	<script src="tests/class.js"></script>
 	<script src="tests/uri.js"></script>
 	<script src="tests/mootools.js"></script>
