--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -7,24 +7,24 @@
 	</head>
 	<body style="background: url('cells.png')">
 		<code></code>
-		<div id="action0" style="position:absolute;left:200px;top:005px;width:150px;height:40px;background:#b22222">xzc</div>
-		<div id="action1" style="position:absolute;left:200px;top:055px;width:150px;height:40px;background:#4169e1">dsf</div>
-		<div id="action2" style="position:absolute;left:200px;top:105px;width:150px;height:40px;background:#daa520">cxv</div>
-		<div id="action3" style="position:absolute;left:200px;top:155px;width:150px;height:40px;background:#228b22">sdf</div>
-		<div id="action4" style="position:absolute;left:200px;top:205px;width:150px;height:40px;background:#b22222">xcv</div>
-		<div id="action5" style="position:absolute;left:200px;top:205px;width:150px;height:40px;background:#b22222">xcv</div>
-		<div id="action6" style="position:absolute;left:200px;top:255px;width:150px;height:40px;background:#4169e1">sdf</div>
-		<div id="action7" style="position:absolute;left:200px;top:305px;width:150px;height:40px;background:#daa520">xcv</div>
-		<div id="action8" style="position:absolute;left:200px;top:355px;width:150px;height:40px;background:#228b22">sdf</div>
-		<div id="action9" style="position:absolute;left:200px;top:405px;width:150px;height:40px;background:#b22222">dfs</div>
-		<div id="actionA" style="position:absolute;left:200px;top:455px;width:150px;height:40px;background:#4169e1">xcv</div>
-		<div id="actionB" style="position:absolute;left:200px;top:505px;width:150px;height:40px;background:#daa520">cxv</div>
-		<div id="actionC" style="position:absolute;left:200px;top:555px;width:150px;height:40px;background:#228b22">sdf</div>
+		<div id="action0"  style="position:absolute;left:100px;top:005px;width:50px;height:40px;background:#b22222">xzc</div>
+		<div id="action1"  style="position:absolute;left:100px;top:055px;width:50px;height:40px;background:#4169e1">dsf</div>
+		<div id="action2"  style="position:absolute;left:100px;top:105px;width:50px;height:40px;background:#daa520">cxv</div>
+		<div id="action3"  style="position:absolute;left:100px;top:155px;width:50px;height:40px;background:#228b22">sdf</div>
+		<div id="action4"  style="position:absolute;left:100px;top:205px;width:50px;height:40px;background:#b22222">xcv</div>
+		<div id="action5"  style="position:absolute;left:100px;top:255px;width:50px;height:40px;background:#b22222">xcv</div>
+		<div id="action6"  style="position:absolute;left:100px;top:305px;width:50px;height:40px;background:#4169e1">sdf</div>
+		<div id="action7"  style="position:absolute;left:100px;top:355px;width:50px;height:40px;background:#daa520">xcv</div>
+		<div id="action8"  style="position:absolute;left:100px;top:405px;width:50px;height:40px;background:#228b22">sdf</div>
+		<div id="action9"  style="position:absolute;left:100px;top:455px;width:50px;height:40px;background:#b22222">dfs</div>
+		<div id="action10" style="position:absolute;left:100px;top:505px;width:50px;height:40px;background:#4169e1">xcv</div>
+		<div id="action11" style="position:absolute;left:100px;top:555px;width:50px;height:40px;background:#daa520">cxv</div>
+		<div id="action12" style="position:absolute;left:100px;top:605px;width:50px;height:40px;background:#228b22">sdf</div>
 	</body>
 	<script>
 (function () {
 	var element = {
-		first : 4,
+		first : 3,
 		second: 345
 	};
 
@@ -36,7 +36,7 @@
 
 	new atom.Animatable(element)
 		.animate({
-			time: 4000,
+			time: 3000,
 			props: {
 				first : 0,
 				second: 7890
@@ -58,13 +58,14 @@
 				elem.css(name, value);
 			}
 		}).animate({
-			time: 4000,
+			fn: 'sine',
+			time: 3000,
 			props: {
-				left  : 400 + 100 * i
+				left: 300 + 50 * i
 			}
 		});
 	};
-	for (var i = 9; i--;) animate('action' + i, i);
+	for (var i = 12; i--;) animate('action' + i, i);
 
 })();
 	</script>
