full atom refactoring

--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -89,6 +89,8 @@
 	};
 	for (var i = 12; i--;) animate('action' + i, i);
 
+	alert(document.getElementsByTagName('span')[0].className.split(' '));
+
 })();
 	</script>
 </html>
