--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -4,75 +4,75 @@
 		<meta charset="utf-8" />
 		<title></title>
 		<script src="../atom-full-compiled.js"></script>
+		<style>
+			.action {
+				position: absolute;
+				left    : 100px;
+				width   : 50px;
+				height  : 40px;
+			}
+		</style>
 	</head>
 	<body style="background: url('cells.png')">
 		<code></code>
-		<div id="action0"  style="position:absolute;left:100px;top:005px;width:50px;height:40px;background:#b22222">xzc</div>
-		<div id="action1"  style="position:absolute;left:100px;top:055px;width:50px;height:40px;background:#4169e1">dsf</div>
-		<div id="action2"  style="position:absolute;left:100px;top:105px;width:50px;height:40px;background:#daa520">cxv</div>
-		<div id="action3"  style="position:absolute;left:100px;top:155px;width:50px;height:40px;background:#228b22">sdf</div>
-		<div id="action4"  style="position:absolute;left:100px;top:205px;width:50px;height:40px;background:#b22222">xcv</div>
-		<div id="action5"  style="position:absolute;left:100px;top:255px;width:50px;height:40px;background:#b22222">xcv</div>
-		<div id="action6"  style="position:absolute;left:100px;top:305px;width:50px;height:40px;background:#4169e1">sdf</div>
-		<div id="action7"  style="position:absolute;left:100px;top:355px;width:50px;height:40px;background:#daa520">xcv</div>
-		<div id="action8"  style="position:absolute;left:100px;top:405px;width:50px;height:40px;background:#228b22">sdf</div>
-		<div id="action9"  style="position:absolute;left:100px;top:455px;width:50px;height:40px;background:#b22222">dfs</div>
-		<div id="action10" style="position:absolute;left:100px;top:505px;width:50px;height:40px;background:#4169e1">xcv</div>
-		<div id="action11" style="position:absolute;left:100px;top:555px;width:50px;height:40px;background:#daa520">cxv</div>
-		<div id="action12" style="position:absolute;left:100px;top:605px;width:50px;height:40px;background:#228b22">sdf</div>
 	</body>
 	<script>
 (function () {
 	var element = {
 		first : 3,
-		second: 345
+		second: 345,
+		get color () {
+			return atom.dom( 'code' ).css( 'background' );
+		},
+		set color (color) {
+			atom.dom( 'code' ).css( 'background', color );
+		}
 	};
 
-	atom.dom.create('p').html(Date.now()).appendTo('body');
-
-
+	function logTime () {
+		atom.dom.create('p').html(Date.now()).appendTo('body');
+	}
 	var update = function () {
 		atom.dom( 'code' ).html( '[' +element.first.toFixed(3) + '] ' + element.second.round() );
 	};
 
+	logTime();
 	update();
+
+	var colors = '#b22222 #4169e1 #daa520 #228b22'.split(' ');
 
 	new atom.Animatable(element)
 		.animate({
 			time: 3000,
 			props: {
 				first : 0,
-				second: 7890
+				second: 7890,
+				color : '#0f0'
 			},
-			onTick: update,
-			onComplete: function () {
-				atom.dom( 'code' ).css( 'background', 'lime' );
-				atom.dom.create('p').html(Date.now()).appendTo('body');
-			}
+			onTick    : update,
+			onComplete: logTime
 		});
 
-	var animate = function (id, i) {
-		var elem = atom.dom('#' + id).html(i);
-
-		var animatable = new atom.Animatable({
-			get: function (name) {
-				return parseInt(elem.css(name));
-			},
-			set: function (name, value) {
-				elem.css(name, value);
-			}
-		});
-		animatable.animate({
+	function create(i) {
+		var elem = atom.dom.create('div')
+			.addClass('action')
+			.css({ top: 5 + 50 * i, background: colors.random })
+			.html(i)
+			.appendTo('body');
+		elem.animate({
 			fn: 'sine',
 			time: 3000,
-			props: { left: 300 + 50 * i }
+			props: {
+				'left': 300 + 50 * i,
+				'background-color': colors.random
+			}
 		});
-		animatable.animate({
+		elem.animate({
 			props: { top: 200 },
 			time: 1000,
 			onComplete: function () {
 				setTimeout(function () {
-					animatable.animate({
+					elem.animate({
 						top : atom.number.random(0,  800),
 						left: atom.number.random(0, 1200)
 					});
@@ -84,11 +84,10 @@
 			.html(i)
 			.appendTo('body')
 			.bind('click', function (e) {
-				animatable.stop(e.ctrlKey);
+				elem.stopAnimation(e.ctrlKey);
 			});
-	};
-	for (var i = 12; i--;) animate('action' + i, i);
-
+	}
+	for (var i = 12; i--;) create(i);
 })();
 	</script>
 </html>
