--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<title></title>
 		<script src="../atom-full-compiled.js"></script>
+		<link rel="stylesheet" href="../Source/atom.css" />
 		<style>
 			.action {
 				position: absolute;
