fix visual tests

--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -23,10 +23,10 @@
 		first : 3,
 		second: 345,
 		get color () {
-			return atom.dom( 'code' ).css( 'background' );
+			return atom.dom( 'code' ).css( 'background-color' );
 		},
 		set color (color) {
-			atom.dom( 'code' ).css( 'background', color );
+			atom.dom( 'code' ).css( 'background-color', color );
 		}
 	};
 
