Migrate to grunt

--- a/Tests/index.html
+++ b/Tests/index.html
@@ -7,7 +7,7 @@
 		<script src="lib/jquery.js"></script>
 		<script src="lib/qunit.js"></script>
 		<!-- Connect AtomJS framework here -->
-		<script src="../atom-full-compiled.js"></script>
+		<script src="../lib/atom-full-compiled.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">Atom Javascript framework tests</h1>
