--- a/Tests/visual-tests.html
+++ b/Tests/visual-tests.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<script src="../atom-full-compiled.js"></script>
+		<script src="../lib/atom-full-compiled.js"></script>
 		<link rel="stylesheet" href="../Source/atom.css" />
 		<style>
 			.action {
